--- a/taskcluster/ci/google-play-strings/kind.yml
+++ b/taskcluster/ci/google-play-strings/kind.yml
@@ -61,4 +61,4 @@ jobs:
          platform: Android/opt
          tier: 2
          kind: other
-      run-on-projects: ['maple', 'mozilla-central', 'mozilla-beta', 'mozilla-release']
+      run-on-projects: ['birch', 'maple', 'mozilla-central', 'mozilla-beta', 'mozilla-release']
