--- a/taskcluster/ci/push-apk/kind.yml
+++ b/taskcluster/ci/push-apk/kind.yml
@@ -53,5 +53,5 @@ jobs:
          platform: Android/opt
          tier: 2
          kind: other
-      run-on-projects: ['mozilla-central', 'mozilla-beta', 'mozilla-release', 'maple']
+      run-on-projects: ['mozilla-central', 'mozilla-beta', 'mozilla-release', 'maple', 'birch']
       deadline-after: 5 days
