Bug 1485353 - P1 create HttpTransactionParent/Child to pretend IPC
--HG--
extra : rebase_source : a8185bb080541be1dfbbe1818617bf5d2b48effb
extra : amend_source : 482a508be3e7cde88838516c12a9790895c82ff2
extra : intermediate-source : d072a5775af84ee9a272e26629d9df606be64aba
extra : source : 7db5e6256992211b3bc810cbaf35e2a8a8ee1b96

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -315,8 +315,8 @@ fail-if = os == "android"
 # This used to be hasNode, but that caused too many issues with tests being
 # silently disabled, so now we explicitly call out the platforms not known
 # to have node installed.
-skip-if = (os == "android") || verify
-run-sequentially = node server exceptions dont replay well
+# skip-if = (os == "android") || verify
+# run-sequentially = node server exceptions dont replay well
 [test_altsvc.js]
 # This used to be hasNode, but that caused too many issues with tests being
 # silently disabled, so now we explicitly call out the platforms not known
